Chapter06/oauth2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - env:
          - name: OAUTH2_PROXY_PROVIDER
            value: azure
          - name: OAUTH2_PROXY_AZURE_TENANT
            value: 72f988bf-86f1-41af-91ab-2d7cd011db47
          - name: OAUTH2_PROXY_CLIENT_ID
            value: 7e439191-b62e-44c9-a292-a58b89af1fb8
          - name: OAUTH2_PROXY_CLIENT_SECRET
            value: e7ap45wdof--9.h2mRc_bo69.-Gig3HEYG
          - name: OAUTH2_PROXY_COOKIE_SECRET
            value: somethingveryrandom
          - name: OAUTH2_PROXY_HTTP_ADDRESS
            value: "0.0.0.0:4180"
          - name: OAUTH2_PROXY_UPSTREAM
            value: "https://handsonaks-ingress.westus2.cloudapp.azure.com/"
          - name: OAUTH2_PROXY_EMAIL_DOMAINS
            value: '*'
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: IfNotPresent
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
