Chapter06/frontend-oauth2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-oauth2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.default.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "handsonaks-ingress.westus2.cloudapp.azure.com/oauth2/start"
spec:
  rules:
  - host: handsonaks-ingress.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
