Chapter06/ingress-with-tls-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-frontend-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - handsonaks-ingress.westus2.cloudapp.azure.com
    secretName: frontend-tls
  rules:
  - host: handsonaks-ingress.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
